@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-11T01:10:15Z",
+  "timestamp" : "2022-06-11T16:18:20Z",
   "count_outdated" : 324,
   "uniques_outdated" : 181,
-  "count" : 351,
-  "uniques" : 200,
+  "count" : 352,
+  "uniques" : 201,
   "clones" : [
     {
       "timestamp": "2022-05-28T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-06-10T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
